objects/EnginePicklists__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>OAE</description>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickValues1__c</fullName>
        <description>semi-colon delimited list of values</description>
        <label>PickValues1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickValues2__c</fullName>
        <label>PickValues2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EnginePicklists</label>
</CustomObject>